--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.10",
+    "react-native-nodemediaclient": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
