--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'ReactNativeLiveApp'
+include ':react-native-nodemediaclient'
+project(':react-native-nodemediaclient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-nodemediaclient/android')
 
 include ':app'
